test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-shared-from-oknil-owned.good
init-field-dflt-nonnil-shared-from-oknil-owned.chpl:11: error: Cannot initialize 'shared MyClass' from a 'owned MyClass?'
